# SiWECAL-LCIO-Analysis

./: .gitignore  README.md
Analysis/: CMakeLists.txt  Load_MarlinDLL.sh  MIPAlignment.txt
Analysis/Macros/: EffAndMult.cpp  MIPAlignment.cpp
Analysis/include/: CleanupAndBeamSelector.h  ECalAnalysis.h  MIPAlignment.h  MIPAnalysis.h  MIPSelector.h  ShowerAnalysis.h
Analysis/script/: EffWindowScan.sh  build.sh
Analysis/src/: CleanupAndBeamSelector.cc  ECalAnalysis.cpp  MIPAlignment.cc  MIPAnalysis.cc  MIPSelector.cc  ShowerAnalysis.cc
config/: ecalConfiguration_Nov2021.txt
eventbuilding/: CMakeLists.txt
eventbuilding/include/: ECal_EventBuilding.h  ECal_EventScheme.h  ECal_Tools.h
eventbuilding/macros/: ConvertDirectorySL_Raw.cpp  ConvertRawFile2ROOT.cpp  computeDeadChannelsFromCalib.cpp  drawDeadChannelsMap.cpp  readTree.cpp
eventbuilding/script/: JoinROOTFiles.sh  RawToROOTMultiple.sh  build.sh  buildFolder.sh  initWorkEnv.sh
eventbuilding/src/: ECal_EventBuilding.cpp  ECal_Tools.cpp  main.cpp
masked/: masked_channels_1GeV_W_22degrees_run_050185.txt  masked_channels_2.6GeV_W_run_050167.txt  masked_channels_3.4GeV_W_run_050171.txt  masked_channels_3GeVMIPscan_run_050044.txt  masked_channels_3GeVMIPscan_run_050046.txt  masked_channels_3GeVMIPscan_run_050047.txt  masked_channels_3GeVMIPscan_run_050049.txt  masked_channels_3GeVMIPscan_run_050053.txt  masked_channels_3GeVMIPscan_run_050056.txt  masked_channels_3GeVMIPscan_run_050059.txt  masked_channels_3GeVMIPscan_run_050073.txt  masked_channels_3GeVMIPscan_run_050075.txt  masked_channels_3GeVMIPscan_run_050076.txt  masked_channels_3GeVMIPscan_run_050078.txt  masked_channels_3GeVMIPscan_run_050081.txt  masked_channels_3GeVMIPscan_run_050092.txt  masked_channels_3GeVMIPscan_run_050095.txt  masked_channels_3GeVMIPscan_run_050107.txt  masked_channels_3GeVMIPscan_run_050110.txt  masked_channels_3GeVMIPscan_run_050118.txt  masked_channels_3GeVMIPscan_run_050121.txt  masked_channels_3GeVMIPscan_run_050124.txt  masked_channels_3GeV_39degrees_run_050150.txt  masked_channels_3GeV_W_waferCenter_run_050181.txt  masked_channels_4.6GeV_W_run_050177.txt  masked_channels_6GeV_W_run_050156.txt
mip_calib/: MIP_3GeVMIPscan_highgain.txt
testbeamtools/: CMakeLists.txt  README  lcio_bcid_correlations.cc
(+18 files in other folders)
